# util_pad

./: .gitignore  CMakeLists.txt  Makefile  README.md  util_pad.sln
include/: util_pad.hpp  util_vfileptr.hpp
src/: impl_upad_luajit.hpp  main.cpp  util_pad.cpp  util_pad.cppm  util_vfileptr.cpp
src/implementation/: lua_wrapper.hpp  luajit.cpp  main.cpp  pad.cpp  vfileptr.cpp
src/interface/: vfileptr.cppm
util_pad/: util_pad.vcxproj  util_pad.vcxproj.filters
